# terraform-aws-iam-policy-guard

./: .gitignore  ARCHITECTURE.md  EVALUATION_NOTES.md  README.md  ROADMAP.md  compute.tf  iam.tf  main.tf  messaging.tf  monitoring.tf  outputs.tf  parameters.tf  storage.tf  tests.tf  variables.tf  versions.tf
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/workflows/: python-ci.yml
examples/complete/: README.md  main.tf  remediator-config.json  terraform.tfvars.example  variables.tf
examples/minimal/: README.md  main.tf  terraform.tfvars.example  variables.tf
examples/standard/: README.md  main.tf
lambdas/: README.md  athena_table_creator.py  audit_logger.py  bedrock_demo.py  build-lambda-packages.sh  conftest.py  detector.py  metrics_publisher.py  pyproject.toml  pytest.ini  remediator.py  requirements-dev.txt  requirements.txt  run_tests.py  slack_handler.py  slack_notifier.py  sns_publisher.py  test-local.sh  test_audit_logger.py  test_detector.py  test_metrics_publisher.py  test_remediator.py  test_slack_handler.py  test_slack_notifier.py  test_sns_publisher.py  test_violation_event.py  violation_event.py
templates/: README.md  buildspec.yml  notification-config.yaml  remediator-config.json  rules.yaml  suppress.yaml
tests/: iam-policy-guard.tftest.hcl
