# Lambda-specific configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-policy-guard-lambdas"
version = "1.0.0"
description = "AWS Lambda functions for IAM Policy monitoring and remediation"
requires-python = ">=3.11"
dependencies = ["boto3>=1.34.0", "pyyaml>=6.0.1", "typing-extensions>=4.8.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "moto[all]>=4.2.0",
    "faker>=19.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-pyyaml>=6.0.12",
    "types-boto3>=1.0.2",
]

[tool.setuptools]
py-modules = [
    "detector",
    "remediator",
    "slack_notifier",
    "violation_event",
    "sns_publisher",
    "audit_logger",
    "slack_handler",
    "metrics_publisher",
    "test_violation_event",
    "test_sns_publisher",
    "test_audit_logger",
    "test_metrics_publisher",
    "test_slack_handler",
    "test_slack_notifier",
]

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.mypy]
ignore_missing_imports = true
